--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                             <constraint firstAttribute="height" constant="50" id="oov-Ht-Lj1"/>
                                         </constraints>
                                         <state key="normal" title="Logout"/>
+                                        <connections>
+                                            <action selector="logoutButtonTapped:" destination="dGQ-e3-m7K" eventType="touchUpInside" id="3MX-Qr-QPX"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIC-FG-ogb" customClass="CategoryViewInSliderMenu" customModule="FinalProject2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="202" width="265" height="348"/>
