--- a/FinalProject2/StackTableViewCell.xib
+++ b/FinalProject2/StackTableViewCell.xib
@@ -35,7 +35,7 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="art" translatesAutoresizingMaskIntoConstraints="NO" id="ekk-Rt-hvM">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultImage" translatesAutoresizingMaskIntoConstraints="NO" id="ekk-Rt-hvM">
                                 <rect key="frame" x="13" y="5" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="UoC-pW-r8C"/>
@@ -185,6 +185,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="art" width="768" height="768"/>
+        <image name="defaultImage" width="512" height="512"/>
     </resources>
 </document>
